service starting error

--- a/roles/bootstrap_mariadb_galera_master/templates/mariadb.cnf.j2
+++ b/roles/bootstrap_mariadb_galera_master/templates/mariadb.cnf.j2
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}
-
-[mariadb]
+[galera]
+wsrep_on=ON
 wsrep_provider=/usr/lib64/galera/libgalera_smm.so
 wsrep_cluster_address = "gcomm://{{ groups['mariadb_cluster'] | map('extract', hostvars, ['ansible_host']) | list | join(',') }}"
 wsrep_cluster_name={{ galera_wsrep_cluster_name }}
@@ -9,6 +9,7 @@ wsrep_node_address={{ hostvars[inventory_hostname]['ansible_default_ipv4']['addr
 binlog_format=row
 default_storage_engine=InnoDB
 innodb_autoinc_lock_mode=2
+innodb_log_file_size=48M
 
 # EXAMPLE OUTPUT
 # [mariadb]
