--- a/roles/bootstrap_mariadb_galera_master/templates/50-server.cnf.j2
+++ b/roles/bootstrap_mariadb_galera_master/templates/50-server.cnf.j2
@@ -1,8 +1,13 @@
 # {{ ansible_managed }}
-[galera]
+
+[mysqld]
+user            = root
+pid-file        = /run/mysqld/mysqld.pid
+socket          = /run/mysqld/mysqld.sock
+bind-address=0.0.0.0
 wsrep_on=ON
 wsrep_provider=/usr/lib64/galera/libgalera_smm.so
-wsrep_cluster_address = "gcomm://{{ groups['mariadb_cluster'] | map('extract', hostvars, ['ansible_host']) | list | join(',') }}"
+wsrep_cluster_address = gcomm://{{ groups['mariadb_cluster'] | map('extract', hostvars, ['ansible_host']) | list | join(',') }}
 wsrep_cluster_name={{ galera_wsrep_cluster_name }}
 wsrep_node_name={{ ansible_hostname }}
 wsrep_node_address={{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}
@@ -10,6 +15,7 @@ binlog_format=row
 default_storage_engine=InnoDB
 innodb_autoinc_lock_mode=2
 innodb_log_file_size=48M
+
 
 # EXAMPLE OUTPUT
 # [mariadb]
